<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BOB</string>
    <string name="bob">BOB</string>
    <string name="action_settings">Settings</string>
    <string name="state">상태</string>
    <string name="notify_message">알림</string>
    <string name="state_FULL">부름</string>
    <string name="state_HUNGRY">고픔</string>
    <string name="main_friend_list">친구목록</string>
    <string name="title_activity_display_add_friend">DisplayAddFriendActivity</string>
    <string name="get_friend_list">주소록 동기화</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="start_bob">식사 시작하기</string>
	<string name="user_name">이름</string>
	<string name="user_phone_number">전화번호</string>
	<string name="friends_to_invite_list">친구초대</string>
	<string name="user_id">아이디</string>
	<string name="password">비밀번호</string>
	<string name="password_check">비밀번호 확인</string>
	<string name="sign_up_complete">가입 완료</string>
	<string name="send_first_bob">첫밥 보내기</string>
	<string name="get_certification_number">인증번호 받기</string>
	<string name="phonenumber">전화번호</string>
	<string name="certification_number">인증 번호</string>
	<string name="certification_complete">인증</string>
	
</resources>
