<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:gravity="center_horizontal"
	android:background="#FF6F48"
   >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="284dp"
        android:layout_height="241dp"
        android:layout_marginTop="100dip"
        android:src="@drawable/signup" />
 
	<EditText
	    android:id="@+id/editText2"
	    android:layout_width="100pt"
	    android:layout_height="wrap_content"
	    android:hint="@string/user_name"
	    android:background="#99FFFFFF"
	    android:ems="10" 
	    android:padding="10dip"
	    android:singleLine="true" 
		android:layout_marginTop="30dip"
		>
	</EditText>
	
	<EditText
	    android:id="@+id/editText1"
	    android:layout_width="100pt"
	    android:layout_height="wrap_content"
	    android:background="#99FFFFFF"
	    android:ems="10"
	    android:layout_marginTop="5dip"
		android:padding="10dip" 
		android:singleLine="true"
	    android:hint="@string/user_phone_number"
	    android:inputType="phone" >
	
	</EditText>
	
	<Button
	    android:id="@+id/btn"
	    android:layout_width="100pt"
	    android:layout_height="wrap_content"
	    android:background="#FFFFFF"
	    android:layout_marginTop="10dip"
	    android:text="@string/start_bob"
		android:padding="10dip"
		android:textSize="11pt" 
		android:onClick="sendMessage" />
</LinearLayout>